[package]
name = "libforc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "concrete_header"
crate-type = ["staticlib"]
path = "src/lib.rs"

[dependencies]
libc = "*"
concrete = {version = "0.2.1", features = ["booleans", "shortints", "integers", "serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
